# extra

./: .ghci  .ghcid  .gitignore  .hlint.yaml  .travis.yml  CHANGES.txt  Extra.hs  Generate.hs  README.md  appveyor.yml  extra.cabal  hie.yaml  stack.yaml  travis.hs
.github/workflows/: ci.yml
Control/Concurrent/: Extra.hs
Control/Exception/: Extra.hs
Control/Monad/: Extra.hs
Data/Either/: Extra.hs
Data/IORef/: Extra.hs
Data/List/: Extra.hs
Data/Tuple/: Extra.hs
Numeric/: Extra.hs
System/Directory/: Extra.hs
System/Environment/: Extra.hs
System/IO/: Extra.hs
System/Info/: Extra.hs
System/Time/: Extra.hs
benchmark/: Main.hs  cabal.project  extra-benchmarks.cabal
src/: Extra.hs  Partial.hs  Test.hs  TestUtil.hs
src/Control/Applicative/: Extra.hs
src/Control/Concurrent/: Extra.hs
src/Control/Exception/: Extra.hs
src/Control/Monad/: Extra.hs  tags
src/Control/Monad/Except/: Extra.hs
src/Data/Bool/: Extra.hs
src/Data/Either/: Extra.hs
src/Data/Foldable/: Extra.hs
src/Data/Function/: Extra.hs
src/Data/IORef/: Extra.hs
src/Data/List/: Extra.hs
src/Data/List/NonEmpty/: Extra.hs
src/Data/Monoid/: Extra.hs
src/Data/Tuple/: Extra.hs
src/Data/Typeable/: Extra.hs
src/Data/Version/: Extra.hs
src/Numeric/: Extra.hs
src/System/Directory/: Extra.hs
src/System/Environment/: Extra.hs
src/System/IO/: Extra.hs
src/System/Info/: Extra.hs
src/System/Process/: Extra.hs
src/System/Time/: Extra.hs
src/Text/Read/: Extra.hs
test/: Test.hs  TestCustom.hs  TestGen.hs  TestUtil.hs
