cabal-version:      >= 1.10
build-type:         Simple
name:               extra
version:            0.5.1
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2014
synopsis:           Extra functions I use.
description:
    A library of extra functions for the standard Haskell libraries. Most functions are simple additions, filling out missing functionality. A few functions are available in later versions of GHC, but this package makes them available back to GHC 7.2.
    .
    The module "Extra" documents all functions provided by this library. Modules such as "Data.List.Extra" provide extra functions over "Data.List" and also reexport "Data.List". Users are recommended to replace "Data.List" imports with "Data.List.Extra" if they need the extra functionality.
homepage:           https://github.com/ndmitchell/extra#readme
bug-reports:        https://github.com/ndmitchell/extra/issues
tested-with:        GHC==7.8.2, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2

extra-source-files:
    CHANGES.txt
    README.md
    Generate.hs

source-repository head
    type:     git
    location: https://github.com/ndmitchell/extra.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base == 4.*,
        directory,
        filepath,
        process,
        time
    if !os(windows)
        build-depends: unix

    exposed-modules:
        Extra
        Control.Concurrent.Extra
        Control.Exception.Extra
        Control.Monad.Extra
        Data.Either.Extra
        Data.IORef.Extra
        Data.List.Extra
        Data.Tuple.Extra
        Numeric.Extra
        System.Directory.Extra
        System.Environment.Extra
        System.Info.Extra
        System.IO.Extra
        System.Process.Extra
        System.Time.Extra

test-suite extra-test
    type:            exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends:
        base == 4.*,
        directory,
        filepath,
        extra,
        time,
        QuickCheck
    if !os(windows)
        build-depends: unix
    hs-source-dirs: test
    ghc-options: -main-is Test.main
    main-is:        Test.hs
    other-modules:
        TestUtil
        TestGen
